remove/add entities from channels

--- a/packages/admin-dashboard/src/locales/en/products.json
+++ b/packages/admin-dashboard/src/locales/en/products.json
@@ -1,191 +1,194 @@
 {
-    "add": "Add product",
-    "assets": "Assets",
+    "add": "Dodaj produkt",
+    "assets": "Aktywa",
     "baseInfoId": "Id: {{value}}",
-    "baseInfoCreated": "Created: {{value}}",
-    "baseInfoUpdated": "Updated: {{value}}",
-    "facetPlaceholder": "Add aspects",
-    "group": "Options group",
-    "image": "Image",
-    "name": "Name",
-    "slug": "Short name (slug)",
-    "product": "Product",
-    "variants": "Variants",
-    "enabled": "Included",
-    "facets": "Aspects",
-    "collections": "Collections",
-    "channels": "Channels",
-    "options": "Options",
-    "optionGroups": "Option groups",
-    "editOptions": "Editing options",
-    "editOption": "Edit option",
+    "baseInfoCreated": "Utworzono: {{value}}",
+    "baseInfoUpdated": "Zaktualizowano: {{value}}",
+    "facetPlaceholder": "Dodaj aspekty",
+    "group": "Grupa opcji",
+    "image": "Obraz",
+    "name": "Nazwa",
+    "slug": "Skrócona nazwa (slug)",
+    "product": "Produkt",
+    "variants": "Warianty",
+    "enabled": "Włączone",
+    "facets": "Aspekty",
+    "collections": "Kolekcje",
+    "channels": "Kanały",
+    "options": "Opcje",
+    "optionGroups": "Grupy opcji",
+    "editOptions": "Edycja opcji",
+    "editOption": "Opcja edycji",
     "sku": "sku",
-    "price": "price",
-    "tax_category": "tax category",
-    "taxes": "taxes",
-    "editProduct": "Edit product",
-    "deleteProduct": "Delete product",
-    "addPrice": "Add price",
+    "price": "cena",
+    "tax_category": "kategoria podatkowa",
+    "taxes": "podatki",
+    "editProduct": "Edytuj produkt",
+    "deleteProduct": "Usuń produkt",
+    "addPrice": "Dodaj cenę",
     "seo": "SEO",
-    "color": "Colour",
-    "colors": "Colours",
-    "colorPalettes": "Colour palettes",
-    "otherOptions": "Other options",
-    "isNew": "New",
-    "isHidden": "Hidden",
-    "products": "Products",
+    "color": "Kolor",
+    "colors": "Kolory",
+    "colorPalettes": "Palety kolorów",
+    "otherOptions": "Inne opcje",
+    "isNew": "Nowość",
+    "isHidden": "Ukryty",
+    "products": "Produkty",
     "forms": {
-        "create": "Create product",
-        "update": "Update product",
-        "createVariant": "Create variant",
-        "updateVariant": "Variant update",
-        "removeVariant": "Delete variant"
+        "create": "Utwórz produkt",
+        "update": "Aktualizuj produkt",
+        "createVariant": "Utwórz wariant",
+        "updateVariant": "Aktualizacja wariantu",
+        "removeVariant": "Usuń wariant",
+        "removeVariantFromChannel": "Usuń wariant z kanału"
     },
     "optionsTab": {
-        "placeholder": "Type to add a new option value",
-        "groupName": "Group name",
-        "values": "Option values",
+        "placeholder": "Wpisz, aby dodać nową wartość opcji",
+        "groupName": "Nazwa grupy",
+        "values": "Wartości opcji",
         "emptyState": {
-            "title": "There is nothing here",
-            "description": "There are no option groups yet. Use the button above to add them."
+            "title": "Nic tutaj nie ma",
+            "description": "Nie ma jeszcze grup opcji. Użyj przycisku powyżej, aby je dodać."
         },
-        "noOptionValues": "Add the options above to find them here"
+        "noOptionValues": "Dodaj opcje powyżej, aby znaleźć je tutaj"
     },
     "variantsTab": {
         "emptyState": {
-            "title": "There is nothing here",
-            "description": "There are no options yet. Use the button above to add them, provided you have already added some options. If not, create them first in the Options tab."
+            "title": "Nic tutaj nie ma",
+            "description": "Nie ma jeszcze żadnych wariantów. Użyj przycisku powyżej, aby je dodać, pod warunkiem, że dodałeś już jakieś opcje. Jeśli nie, utwórz je najpierw w zakładce Opcje."
         }
     },
     "table": {
-        "featuredAsset": "Image",
+        "featuredAsset": "Obraz",
         "id": "ID",
-        "createdAt": "Created in",
-        "updatedAt": "Updated in",
-        "name": "Name",
-        "slug": "Short name (slug)",
-        "variants": "Number of variants",
-        "collections": "In collections",
-        "inValueCollections": "In collections {{value}}",
-        "openMenu": "Open menu",
-        "actions": "Activities",
-        "copyId": "Copy id",
-        "delete": "Delete product",
-        "allVariantsStock": "Stock of all variants",
-        "allocated": "allocated",
-        "stockOnHand": "Stock on hand",
-        "stockAllocated": "Stock allocated",
-        "stock": "Stock"
+        "createdAt": "Utworzono w",
+        "updatedAt": "Zaktualizowano w",
+        "name": "Nazwa",
+        "slug": "Skrócona nazwa (slug)",
+        "variants": "Liczba wariantów",
+        "collections": "W kolekcjach",
+        "inValueCollections": "W kolekcjach {{value}}",
+        "openMenu": "Otwórz menu",
+        "actions": "Działania",
+        "copyId": "Kopiuj id",
+        "delete": "Usuń produkt",
+        "allVariantsStock": "Zapasy wszystkich wariantów",
+        "allocated": "przydzielony",
+        "stockOnHand": "Stan magazynowy",
+        "stockAllocated": "Zablokowany stan magazynowy",
+        "stock": "Stan magazynowy"
     },
     "deleteProductDialog": {
-        "button": "Delete product",
-        "title": "Are you sure?",
-        "description": "The product will be permanently removed.",
-        "confirm": "Delete product",
-        "cancel": "Cancel"
+        "button": "Usuń produkt",
+        "title": "Czy na pewno?",
+        "description": "Produkt zostanie trwale usunięty.",
+        "confirm": "Usuń produkt",
+        "cancel": "Anuluj"
     },
-    "columns": "Columns",
+    "columns": "Kolumny",
     "toasts": {
-        "deletionProductErrorToast": "Product deletion failed",
-        "deletionProductSuccessToast": "Product was successfully deleted",
-        "updateProductErrorToast": "Product could not be edited",
-        "updateProductSuccessToast": "Product has been successfully updated",
-        "createProductSuccessToast": "Product successfully created",
-        "createProductErrorToast": "Product could not be created",
-        "fetchProductErrorToast": "Product download failed",
-        "createProductVariantSuccessToast": "Variant has been created",
-        "createProductVariantErrorToast": "Variant not created",
-        "updateProductVariantSuccessToast": "Variant has been updated",
-        "updateProductVariantErrorToast": "Variant could not be updated",
-        "deleteProductVariantSuccessToast": "Variant has been deleted",
-        "deleteProductVariantErrorToast": "Variant could not be removed",
-        "createOptionSuccessToast": "Variant successfully created",
-        "createOptionInUseToast": "Option is used by some variants. Remove them first.",
-        "createOptionErrorToast": "Failed to create option",
-        "deleteOptionSuccessToast": "Option successfully deleted",
-        "deleteOptionErrorToast": "Option could not be deleted successfully",
-        "updateOptionSuccessToast": "Option has been updated",
-        "updateOptionErrorToast": "Option failed to update",
-        "deletionOptionSuccessToast": "Option group was successfully deleted",
-        "deletionOptionErrorToast": "Option group could not be deleted",
-        "createOptionGroupSuccessToast": "Option group successfully created",
-        "createOptionGroupErrorToast": "Option group could not be created"
+        "deletionProductErrorToast": "Usunięcie produktu nie powiodło się",
+        "deletionProductSuccessToast": "Produkt został pomyślnie usunięty",
+        "updateProductErrorToast": "Nie udało się edytować produktu",
+        "updateProductSuccessToast": "Produkt został pomyślnie zaktualizowany",
+        "createProductSuccessToast": "Produkt utworzony pomyślnie",
+        "createProductErrorToast": "Nie udało się utworzyć produktu",
+        "fetchProductErrorToast": "Nie udało się pobrać produktu",
+        "createProductVariantSuccessToast": "Wariant został utworzony",
+        "createProductVariantErrorToast": "Nie udało się utworzyć wariantu",
+        "updateProductVariantSuccessToast": "Wariant został zaktualizowany",
+        "updateProductVariantErrorToast": "Nie udało się zaktualizować wariantu",
+        "deleteProductVariantSuccessToast": "Wariant został usunięty",
+        "deleteProductVariantErrorToast": "Nie udało się usunąć wariantu",
+        "removeFromChannelProductVariantErrorToast": "Nie udało się usunąć wariantu z kanału",
+        "removeFromChannelProductVariantSuccessToast": "Wariant został usunięty z kanału",
+        "createOptionSuccessToast": "Wariant utworzony pomyślnie",
+        "createOptionInUseToast": "Opcja jest używana przez niektóre warianty. Usuń je najpierw.",
+        "createOptionErrorToast": "Nie udało się utworzyć opcji",
+        "deleteOptionSuccessToast": "Opcja usunięta pomyślnie",
+        "deleteOptionErrorToast": "Nie udało się usunąć opcji",
+        "updateOptionSuccessToast": "Opcja została zaktualizowana",
+        "updateOptionErrorToast": "Nie udało się zaktualizować opcji",
+        "deletionOptionSuccessToast": "Grupa opcji została pomyślnie usunięta",
+        "deletionOptionErrorToast": "Nie udało się usunąć grupy opcji",
+        "createOptionGroupSuccessToast": "Grupa opcji utworzona pomyślnie",
+        "createOptionGroupErrorToast": "Nie udało się utworzyć grupy opcji"
     },
     "details": {
-        "addStockLocation": "Add stock location",
-        "basicInfo": "Basic information",
-        "settings": "Settings",
-        "customFields": "Non-standard fields",
-        "facetValues": "Aspect value",
-        "image": "Image",
-        "price": "Price",
-        "featuredAsset": "Recommended assets",
-        "otherAssets": "Other assets",
-        "noFeaturedAsset": "Not established",
-        "noAssets": "No assets yet",
-        "setAsFeatured": "Set as recommended",
-        "editAsset": "Edit asset",
-        "removeAsset": "Remove resource",
-        "usedForColorsDesc": "Use this attribute for guys who are colours",
-        "colorsCollectionDesc": "Use this for product paths in COLOUR (BLAT/CORPUS)",
-        "usedForProductCreationsDesc": "Use this attribute when creating a colour collection",
-        "valueDeleteSuccess": "The value of the resource was successfully deleted",
-        "valueDeleteFail": "An error occurred:",
-        "taxRateDescription": "Contains tax in:",
-        "stockLevels": "Stock levels",
-        "trackInventory": "Inventory tracking",
-        "track": "Tracking",
-        "notTrack": "Do not track",
-        "inherit": "Inheritance from global settings",
-        "outThreshold": "Exhaustion threshold",
-        "useGlobal": "Use global value",
-        "defaultStock1": "Total stock level",
-        "defaultStock2": "Total stock levels: Allocated"
+        "addStockLocation": "Dodaj lokalizację zapasów",
+        "basicInfo": "Podstawowe informacje",
+        "settings": "Ustawienia",
+        "customFields": "Pola niestandardowe",
+        "facetValues": "Wartość aspektu",
+        "image": "Obraz",
+        "price": "Cena",
+        "featuredAsset": "Polecane aktywa",
+        "otherAssets": "Inne aktywa",
+        "noFeaturedAsset": "Nie ustalono",
+        "noAssets": "Nie ma jeszcze żadnych aktywów",
+        "setAsFeatured": "Ustaw jako polecane",
+        "editAsset": "Edytuj zdjęcie",
+        "removeAsset": "Usuń zasób",
+        "usedForColorsDesc": "Użyj tego atrybutu dla facetów, którzy są kolorami",
+        "colorsCollectionDesc": "Użyj tego dla ścieżek produktu w KOLORZE (BLAT/CORPUS)",
+        "usedForProductCreationsDesc": "Użyj tego atrybutu podczas tworzenia kolekcji kolorów",
+        "valueDeleteSuccess": "Wartość zasobu została pomyślnie usunięta",
+        "valueDeleteFail": "Wystąpił błąd:",
+        "taxRateDescription": "Zawiera podatek w:",
+        "stockLevels": "Poziomy zapasów",
+        "trackInventory": "Śledzenie stanów magazynowych",
+        "track": "Śledzenie",
+        "notTrack": "Nie śledź",
+        "inherit": "Dziedziczenie z ustawień globalnych",
+        "outThreshold": "Próg wyczerpania zapasów",
+        "useGlobal": "Użyj wartości globalnej",
+        "defaultStock1": "Całkowity poziom zapasów",
+        "defaultStock2": "Całkowity poziom zapasów: Przydzielony"
     },
     "customFields": {
         "seo": {
-            "title": "SEO title",
-            "description": "Description SEO",
-            "facebookImage": "SEO image on Facebook",
-            "twitterImage": "SEO image on Twitter"
+            "title": "Tytuł SEO",
+            "description": "Opis SEO",
+            "facebookImage": "Obraz SEO na Facebooku",
+            "twitterImage": "Obraz SEO na Twitterze"
         },
         "images": {
-            "mainImage": "Main product image",
-            "hoverImage": "Product image after hovering the cursor"
+            "mainImage": "Główny obraz produktu",
+            "hoverImage": "Obraz produktu po najechaniu kursorem"
         },
         "textCards": {
-            "completionDate": "End date",
-            "delivery": "Delivery",
-            "payment": "Payment",
-            "materials": "Materials",
-            "finish": "Finishing",
-            "sizes": "Sizes"
+            "completionDate": "Data zakończenia",
+            "delivery": "Dostawa",
+            "payment": "Płatność",
+            "materials": "Materiały",
+            "finish": "Wykończenie",
+            "sizes": "Rozmiary"
         },
         "discountRating": {
-            "title": "General",
-            "discountedBy": "Discounted by",
-            "rating": "Evaluation result"
+            "title": "Ogólne",
+            "discountedBy": "Zdyskontowane przez",
+            "rating": "Wynik oceny"
         }
     },
     "addOptionGroupDialog": {
-        "title": "Add option group",
-        "name": "Name",
-        "code": "Code",
-        "cancel": "Cancel",
-        "add": "Add"
+        "title": "Dodaj grupę opcji",
+        "name": "Nazwa",
+        "code": "Kod",
+        "cancel": "Anuluj",
+        "add": "Dodaj"
     },
     "addVariantDialog": {
-        "title": "Add product variant",
-        "name": "Name",
+        "title": "Dodaj wariant produktu",
+        "name": "Nazwa",
         "sku": "SKU",
-        "cancel": "Cancel",
-        "add": "Add variant",
-        "new": "New variant",
-        "selectOption": "Select option",
-        "createBasic": "Basic data",
-        "createOptions": "Options"
+        "cancel": "Anuluj",
+        "add": "Dodaj wariant",
+        "new": "Nowy wariant",
+        "selectOption": "Wybierz opcję",
+        "createBasic": "Dane podstawowe",
+        "createOptions": "Opcje"
     },
     "validation": {
-        "nameSlugRequired": "Name and slug fields are required"
+        "nameSlugRequired": "Pola nazwy i slug są wymagane"
     }
 }
