--- a/packages/admin-dashboard/src/locales/en/channels.json
+++ b/packages/admin-dashboard/src/locales/en/channels.json
@@ -8,6 +8,7 @@
     "defaultChannel": "Default channel",
     "buttonDisabledTooltip": "Fill in all required fields",
     "noChangesTooltip": "No changes have been made",
+    "assignToChannel": "Assign to channel",
     "table": {
         "id": "Id",
         "code": "Code",
