--- a/packages/admin-dashboard/src/locales/pl/channels.json
+++ b/packages/admin-dashboard/src/locales/pl/channels.json
@@ -8,6 +8,7 @@
     "defaultChannel": "Kanał domyślny",
     "buttonDisabledTooltip": "Wypełnij wszystkie wymagane pola",
     "noChangesTooltip": "Nie wprowadzono żadnych zmian",
+    "assignToChannel": "Przypisz do kanału",
     "table": {
         "id": "Id",
         "code": "Kod",
